show detailed error option + view log from config page

--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -21,9 +21,10 @@
 #
 
 #==
-#== Configuration Editor UI Localization file
+#== Configuration Editor UI Localization file.  This file should not be modified
+#== by a site administrator.  Site specific configuration is stored in the
+#== PwmConfiguration.xml file.
 #==
-
 
 
 #*******************************************************************************************#
@@ -142,6 +143,12 @@ LABEL_display.applicationTitle=Application Title
 DEFLT_display.applicationTitle={"":"Password Self Service"}
 DESCR_display.applicationTitle=Name of the application, displayed in the header on each page.
 
+LABEL_display.showDetailedErrors=Show Detailed Errors
+DEFLT_display.showDetailedErrors=true
+DESCR_display.showDetailedErrors=While useful for administrators, especially during configuration, showing detailed error \
+  messages to users may be confusing as well as a security hazard.
+
+
 LABEL_password.showAutoGen=Show Auto Generate Randoms
 DEFLT_password.showAutoGen=true
 DESCR_password.showAutoGen=If true, the user will see the auto-generate random password link on the change password screen.
@@ -195,28 +202,32 @@ CATEGORY_DESCR_LDAP=Settings that control PWM's interaction with an LDAP directo
   the LDAP directory vendor and type.  Vendor specific settings have their own category.
 
 LABEL_ldap.serverUrls=LDAP URLs
-DEFLT_ldap.serverUrls=["ldaps:\/\/127.0.0.1:636","ldap:\/\/127.0.0.1:389"]
-DESCR_ldap.serverUrls=List of ldap servers in URL format.  PWM will use thse servers in a \
- fail-over mode.  The servers are used in order of appearance in this list.  If the first server \
+DEFLT_ldap.serverUrls=["ldaps:\/\/127.0.0.1:636","ldaps:\/\/www.example.com:636"]
+DESCR_ldap.serverUrls=List of ldap servers in URL format.  PWM will use these servers in a \
+ fail-over configuration.  The servers are used in order of appearance in this list.  If the first server \
  is unavailable PWM will use the next available server in the list.  PWM will \
- then periodically fail back to the first server to see if it has become available.\
+ then periodically fall-back to the first server to see if it has become available.\
  <ul><li>For plain-text servers, use "<i>ldap://serverame:389</i>" format</li>\
- <li>For SSL, use the "<i>ldaps://servername:636</i>" format</ul></li>\
+ <li>For secure SSL, use the "<i>ldaps://servername:636</i>" format</ul></li>\
  <br/>\
- Note also that for SSL connections, the Java virtual machine running PWM must trust the directory server, \
+ When using secure connections, the Java virtual machine running PWM must trust the directory server, \
  either because it has a valid commercial certificate, or because you have \
- manually added the public key certificate from the tree to the Java keystore.
+ manually added the public key certificate from the tree to the Java keystore. \
+ <br/><br/>\
+ <b>WARNING</b>: Avoid using non-secure connections for all but the most basic testing purposes.  Many LDAP servers \
+ will reject password operations on non-secure connections.
+
 REGEX_ldap.serverUrls=^(ldap|ldaps)://[a-zA-Z0-9.-]+:[0-9]+$
 
 LABEL_ldap.proxy.username=LDAP Proxy User
 DEFLT_ldap.proxy.username=cn=admin,o=example
+DEFLT-AD_ldap.proxy.username=cn=administrator,cn=users,dc=site,dc=example,dc=net
 DESCR_ldap.proxy.username=LDAP Proxy User used by PWM to access the ldap directory. \
  This user must have rights to browse users, and manage password attributes on \
  the user object.\
   <br/><br/>\
   Any valid string the ldap directory will accept during a BIND operation is valid.  For most directories \
-  this will be a DN (distinguished name) in a format similar to <i>cn=admin,o=example</i>.  For Active Directory \
-  this can be in the format of <i>admin@example.org</i>.\
+  this will be a DN (distinguished name) in a format similar to <i>cn=admin,o=example</i>. \
  <br/><br/>\
  Generally, the proxy user needs read/browse object rights to all user objects \
  it will manage, as well as create object rights in the new user container (if \
@@ -230,7 +241,8 @@ LABEL_ldap.testuser.username=LDAP Test User
 DEFLT_ldap.testuser.username=
 DESCR_ldap.testuser.username=LDAP Test User used by PWM to test access to the ldap directory. \
  This user should be configured similar to a normal user account with normal access privileges. \
- PWM will periodically use this account to perform a health check, including changing the password of the account.\
+ PWM will periodically use this account to perform a health check, including changing the password of the account. \
+  Using a test user account will greatly increase the ability of PWM to detect configuration issues.\
 
 LABEL_ldap.proxy.idleTimeout=LDAP Proxy Idle Timeout
 DEFLT_ldap.proxy.idleTimeout=0
@@ -245,6 +257,7 @@ DESCR_ldap.promiscuousSSL=If true PWM will trust any SSL certificate without any
 
 LABEL_ldap.rootContexts=LDAP Contextless Login Root
 DEFLT_ldap.rootContexts=ou=users,o=example
+DEFLT-AD_ldap.rootContexts=cn=users,dc=site,dc=nowhere,dc=net
 DESCR_ldap.rootContexts=Base context to search for usernames during login
 
 LABEL_ldap.selectableContexts=Login Contexts
@@ -272,6 +285,7 @@ DESCR_pwmAdmin.queryMatch=Query string used to detect if a user is a pwmAdminist
 
 LABEL_ldap.usernameSearchFilter=Username search filter
 DEFLT_ldap.usernameSearchFilter=(&(objectClass=person)(cn=%USERNAME%))
+DEFLT-AD_ldap.usernameSearchFilter=(&(objectClass=person)(|(samAccountName=%USERNAME%)(cn=%USERNAME%)(mail=%USERNAME%)))
 DESCR_ldap.usernameSearchFilter=Used to for contextless login and other functions to find \
  users in ldap using usernames.  The value <i>%USERNAME%</i> is replaced with the \
  actual username value.
@@ -577,6 +591,7 @@ DESCR_password.policy.checkWordlist=Check the password against the configured PW
 
 LABEL_password.policy.ADComplexity=Enforce Microsoft-AD Password Complexity
 DEFLT_password.policy.ADComplexity=false
+DEFLT-AD_password.policy.ADComplexity=true
 DESCR_password.policy.ADComplexity=Enforce MS-ActiveDirectory style password complexity rules:\
 <ul><li>Not contain the user's account name or parts of the user's full name that exceed two consecutive characters</li>\
 <li>Be at least six characters in length</li>\
@@ -962,12 +977,14 @@ DESCR_recovery.enable=If enabled, forgotten password recovery will be available 
 
 LABEL_challenge.userAttribute=Response Storage Attribute
 DEFLT_challenge.userAttribute=pwmResponseSet
+DEFLT-AD_challenge.userAttribute=
 DESCR_challenge.userAttribute=Attribute to use for response storage when storing to ldap directory.  If blank, \
   a vendor specific response storage method must be configured or else an error will occur when saving responses.
 REGEX_challenge.userAttribute=^[a-zA-Z][a-zA-Z0-9]+$
 
 LABEL_responses.storage.pwmDB=Store Responses in pwmDB
 DEFLT_responses.storage.pwmDB=false
+DEFLT-AD_responses.storage.pwmDB=true
 DESCR_responses.storage.pwmDB=Store (read and write) user responses in pwmDB.  This method allows for user challenge \
   responses to be saved without saving them to the ldap directory.  Responses are saved using the GUID of the user \
   as the key.  See the ldap configuration to control how the GUID is read from the directory.
