sms token feature - issue 56

--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -477,6 +477,158 @@ DEFLT_email.challenge.token.htmlBody={"":"You, or someone acting as you has requ
 DESCR_email.challenge.token.htmlBody=Body of email sent during forgotten password token process.
 
 #*******************************************************************************************#
+#                                         SMS                                               #
+#*******************************************************************************************#
+CATEGORY_LABEL_SMS=SMS
+CATEGORY_DESCR_SMS=Configuration settings for all PWM sent SMS messages. For SMS message text \
+  configuration settings are provided.  It is encouraged that for each configured setting \
+  and locale, SMS texts are configured.  PWM will deliver the message using the configured \
+  short message service gateway.
+
+LABEL_sms.enable=Enable SMS Messages
+DEFLT_sms.enable=false
+DESCR_sms.enable=Enable sending of SMS messages for tokens and other events
+
+LABEL_sms.priority=SMS Priority Over Email
+DEFLT_sms.priority=both
+DESCR_sms.priority=Set the preference for sending SMS or email. Valid values are: <ul>\
+  <li><tt>both</tt>: try to send both SMS and email</li>\
+  <li><tt>emailfirst</tt>: try to send email; if no email address is available, try SMS</li>\
+  <li><tt>smsfirst</tt>: try to send SMS; if no SMS number is available, try email</li>\
+  <li><tt>smsonly</tt>: try to send SMS; if no SMS number is available, do not try email</li>\
+  </ul>
+REGEX_sms.priority=^(both|emailfirst|smsfirst|smsonly)$
+
+LABEL_sms.userSmsAttribute=User SMS number attribute
+DEFLT_sms.userSmsAttribute=personalMobile
+DESCR_sms.userSmsAttribute=User LDAP attribute containing the user's mobile phone number for SMS.
+REGEX_sms.userSmsAttribute=^[a-zA-Z][a-zA-Z0-9]+$
+
+LABEL_sms.queueMaxAge=Maximum SMS Queue Age
+DEFLT_sms.queueMaxAge=300
+DESCR_sms.queueMaxAge=Maximum age (in seconds) an sms can wait in the send queue.  If an sms is in the send \
+  queue longer than this time, it will be discarded.  SMS messages only persist in the send queue if there is \
+  an IO or network error to the sms gateway server while sending the message.
+
+LABEL_sms.gatewayURL=SMS Gateway
+DEFLT_sms.gatewayURL=https://sms.example.com/service
+DESCR_sms.gatewayURL=URL for the SMS gateway
+REGEX_sms.gatewayURL=^https?:\/\/[a-z0-9_\.-]{3,}\/.*
+
+LABEL_sms.gatewayUser=SMS Gateway User
+DEFLT_sms.gatewayUser=exampleuser
+DESCR_sms.gatewayUser=User name for the SMS gateway
+
+LABEL_sms.gatewayPassword=SMS Gateway Password
+DEFLT_sms.gatewayPassword=
+DESCR_sms.gatewayPassword=User password for the SMS gateway
+
+LABEL_sms.gatewayMethod=HTTP(S) Method
+DEFLT_sms.gatewayMethod=POST
+DESCR_sms.gatewayMethod=HTTP(S) protocol method to be used for sending SMS messages.  \
+  Valid values are <tt>POST</tt> and <tt>GET</tt>.
+REGEX_sms.gatewayMethod=^(GET|POST)$
+
+LABEL_sms.gatewayAuthMethod=SMS Gateway Authentication Method
+DEFLT_sms.gatewayAuthMethod=request
+DESCR_sms.gatewayAuthMethod=Select the method to be used for authentication on the SMS gateway:<ul>\
+  <li><tt>request</tt>: authentication will be part of the request</li>\
+  <li><tt>http</tt>: use HTTP basic authentication</li>\
+  </ul>
+REGEX_sms.gatewayAuthMethod=^(request|http)$
+
+LABEL_sms.requestData=SMS Request Data
+DEFLT_sms.requestData={"":"user=%USER%&pass=%PASS%&to=%TO%&msg=%MESSAGE%"}
+DESCR_sms.requestData=The data to be submitted in order to send an SMS message. You can use\
+  certain codes that will be replaced:<ul>\
+  <li><tt>%USER%</tt>: authentication user name</li>\
+  <li><tt>%PASS%</tt>: authentication password</li>\
+  <li><tt>%SENDERID%</tt>: sender identification</li>\
+  <li><tt>%TO%</tt>: recipient SMS number</li>\
+  <li><tt>%REQUESTID%</tt>: randomly generated request identifier</li>\
+  <li><tt>%MESSAGE%</tt>: the message to be sent</li>\
+  </ul>
+
+LABEL_sms.requestContentType=SMS Data Content Type
+DEFLT_sms.requestContentType=application/x-www-form-urlencoded
+DESCR_sms.requestContentType=Content Type for POST data. This is the mime type for the content. \
+  This only applies if the HTTP(S) Method is POST. Common values are:<ul>\
+  <li><tt>application/x-www-form-urlencoded</tt>: HTTP form data</li>\
+  <li><tt>text/plain</tt>: Plain ASCII data</li>\
+  <li><tt>text/xml</tt>: XML document</li>\
+  </ul>\
+  Optionally, a character set can be appended. Eg.:<ul>\
+  <li><tt>application/x-www-form-urlencoded; charset=utf-8</tt>: HTTP form data in UTF-8 encoding</li>\
+  </ul>
+REGEX_sms.requestContentType=^[A-Za-z0-9_\.-]+/[A-Za-z0-9_\.-]+$
+
+LABEL_sms.requestContentEncoding=SMS Data Content Encoding
+DEFLT_sms.requestContentEncoding=URL
+DESCR_sms.requestContentEncoding=Data for fields in the SMS data may need \
+  encoding or escaping. Valid values are: <ul>\
+  <li><tt>NONE</tt>: no encoding, use at your own risk</li>\
+  <li><tt>CSV</tt>: escape for comma separated values</li>\
+  <li><tt>HTML</tt>: for HTML data</li>\
+  <li><tt>JAVA</tt>: for Java String representations</li>\
+  <li><tt>JAVASCRIPT</tt>: recommended for JSON formatted documents</li>\
+  <li><tt>SQL</tt>: turn single-quotes (') into double single-quotes ('')</li>\
+  <li><tt>URL</tt>: (default) recommended for GET requests and POST with form data</li>\
+  <li><tt>XML</tt>: for XML and/or SOAP services</li>\
+  </ul>\
+  See <a href="http://commons.apache.org/lang/api-release/org/apache/commons/lang/StringEscapeUtils.html" \
+  target="_new">Apache Commons JavaDocs</a> for detailed information.
+REGEX_sms.requestContentEncoding=^(NONE|CSV|HTML|JAVA|JAVASCRIPT|SQL|URL|XML)$
+
+LABEL_sms.maxTextLength=Maximum SMS Text Length
+DEFLT_sms.maxTextLength=140
+DESCR_sms.maxTextLength=Maximum length for SMS text. Some services allow texts longer than one \
+  message (generally 140 bytes). If the text is longer than the configured maximum, multiple requests \
+  will be made.
+
+LABEL_sms.responseOkRegex=Response Regular Expressions
+DEFLT_sms.responseOkRegex=[""]
+DESCR_sms.responseOkRegex=Regular expressions that can be used to determine whether the SMS has been \
+  sent succesfully. If the response matches any of the expressions, the transmission is considered \
+  succesful. If no expressions are entered, all transmissions are assumed successful. \
+  NOTE: the string must match an entire line. Use <tt>.*</tt> to match anything after the required texts.
+
+LABEL_sms.senderID=SMS Sender ID
+DEFLT_sms.senderID=
+DESCR_sms.senderID=Alphanumerical sender identification. If blank, the provider \
+  will most likely use a default or anonymous sender identification. In most cases \
+  the sender ID must be validated by the SMS provider. Please contact your provider \
+  for values that can be used as a valid sender identification.
+
+LABEL_sms.phoneNumberFormat=SMS Phone Number Format
+DEFLT_sms.phoneNumberFormat=zeros
+DESCR_sms.phoneNumberFormat=The format that should be used for the mobile phone number:<ul> \
+  <li><tt>plain</tt>: country code (e.g. 1 for USA) plus subscriber number (e.g. 12312345): 112312345</li>\
+  <li><tt>plus</tt>: as plain, but with a plus sign as a prefix: +112312345</li>\
+  <li><tt>zeros</tt>: as plain, but prefixed with a double zero: 00112312345</li>\
+  </ul>
+REGEX_sms.phoneNumberFormat=^(plain|plus|zeros)$
+
+LABEL_sms.defaultCountryCode=Default SMS Country Code
+DEFLT_sms.defaultCountryCode=1
+DESCR_sms.defaultCountryCode=Default country code for SMS phone numbers, see \
+  <a href="http://countrycode.org/" target="_blank">http://countrycode.org/</a> for a list of \
+  country codes.
+REGEX_sms.defaultCountryCode=^\d{1,3}$
+
+LABEL_sms.requestId.characters=Request Id Characters
+DEFLT_sms.requestId.characters=0123456789abcdef
+DESCR_sms.requestId.characters=Available characters SMS request id
+
+LABEL_sms.requestId.length=Request Id Length
+DEFLT_sms.requestId.length=6
+DESCR_sms.requestId.length=Length of the SMS request id
+
+LABEL_sms.challenge.token.message=Challenge Token SMS Text
+DEFLT_sms.challenge.token.message={"":"Your activation token is %TOKEN%."}
+DESCR_sms.challenge.token.message=Message text of SMS sent during forgotten password token process.
+
+
+#*******************************************************************************************#
 #                                 Global Password Policy                                    #
 #*******************************************************************************************#
 CATEGORY_LABEL_PASSWORD_POLICY=Password Policy
@@ -1505,3 +1657,26 @@ DESCR_email.smtp.advancedSettings=Name/Value settings to control the behavior of
   Available settings are defined as part of the <a href="http://java.sun.com/products/javamail/javadocs/com/sun/mail/smtp/package-summary.html">JavaMail API</a>. \
   The settings must be in "name=value" format, where name is the key value of a valid JavaMail API setting.
 REGEX_email.smtp.advancedSettings=^[a-zA-Z0-9.]+=.+$
+
+LABEL_http.proxytype=HTTP Proxy Server Type
+DEFLT_http.proxytype=DIRECT
+DESCR_http.proxytype=The following types of proxies can be used: <ul>\
+  <li><tt>DIRECT</tt>: no proxy</li>\
+  <li><tt>HTTP</tt>: HTTP proxy server</li>\
+  <li><tt>SOCKS</tt>: SOCKS version 4 or 5</li>\
+  </ul>\
+  If you enter anything other than <tt>DIRECT</tt>, the HTTP proxy server address must be filled in, too.
+REGEX_http.proxytype=^(DIRECT|HTTP|SOCKS)$
+
+LABEL_http.proxyserver=HTTP Proxy Server
+DEFLT_http.proxyserver=proxy.example.com
+DESCR_http.proxyserver=The server name (FQDN), IPv4 or IPv6 address of the \
+  proxy server used for outgoing HTTP traffic.
+REGEX_http.proxyserver=^([A-Za-z0-9_\.-]+\.[A-Za-z]{2,}|[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}|[0-9A-Fa-f:]{3,})$
+
+LABEL_http.proxyport=HTTP Proxy Server Port
+DEFLT_http.proxyport=8080
+DESCR_http.proxyport=The server port number of the proxy server used for outgoing HTTP traffic. \
+  If the port number is ommitted or zero, the default port number 8080 is used for HTTP or \
+  1080 for SOCKS.
+REGEX_http.proxyport=^([0-9]+{1,5})$
