--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -257,12 +257,12 @@ DESCR_ldap.promiscuousSSL=If true PWM will trust any SSL certificate without any
 
 LABEL_ldap.rootContexts=LDAP Contextless Login Root
 DEFLT_ldap.rootContexts=ou=users,o=example
-DEFLT-AD_ldap.rootContexts=cn=users,dc=site,dc=nowhere,dc=net
+DEFLT-AD_ldap.rootContexts=cn=users,dc=site,dc=example,dc=net
 DESCR_ldap.rootContexts=Base context to search for usernames during login
 
 LABEL_ldap.selectableContexts=Login Contexts
 DEFLT_ldap.selectableContexts=[""]
-DESCR_ldap.selectableContexts=If configured, this setting will add another field to the form-based PWM \
+DESCR_ldap.selectableContexts=This optional setting, if configured, will add another field to the form-based PWM \
  login screen.  The field will allow the user to select a specific context \
  used during login.  This allows PWM to be used against ldap directories that do not \
  have unique usernames throughout the entire directory. \
@@ -279,6 +279,7 @@ REGEX_ldap.selectableContexts=^.+:::.+$
 
 LABEL_pwmAdmin.queryMatch=PWM Admin Query String
 DEFLT_pwmAdmin.queryMatch=(groupMembership=cn=PwmAdmins,ou=Groups,o=example)
+DEFLT-AD_pwmAdmin.queryMatch=(memberOf=CN=Administrators,CN=Builtin,DC=site,DC=example,DC=net)
 DESCR_pwmAdmin.queryMatch=Query string used to detect if a user is a pwmAdministrator.  An LDAP query is performed \
  during pwm login against the logged in user to determine if the user is a pwm Admin.  If \
  the user matches the query, then the user is considered a PWM administrator.
@@ -299,6 +300,7 @@ DESCR_ldap.readPasswordPolicies=If this setting is true, PWM will attempt to rea
 
 LABEL_ldap.addObjectClasses=Auto Add Object Classes
 DEFLT_ldap.addObjectClasses=["pwmUser"]
+DEFLT-AD_ldap.addObjectClasses=[]
 DESCR_ldap.addObjectClasses=Object classes to automatically add to users who authenticate to the password \
  servlet.  Typically this is the standard pwmUser aux class.  The definition for this \
  class is in the supplied pwmSchema.ldif file.
@@ -325,6 +327,7 @@ REGEX_ldap.namingAttribute=^[a-zA-Z][a-zA-Z0-9]+$
 
 LABEL_passwordLastUpdateAttribute=Last Password Update Attribute
 DEFLT_passwordLastUpdateAttribute=pwmLastPwdUpdate
+DEFLT-AD_passwordLastUpdateAttribute=
 DESCR_passwordLastUpdateAttribute=This attribute is used to mark when the password is updated, and is used during \
  replication checks, and other processes.
 REGEX_passwordLastUpdateAttribute=^[a-zA-Z][a-zA-Z0-9]+$
@@ -626,7 +629,6 @@ DESCR_sms.requestId.length=Length of the SMS request id
 LABEL_sms.challenge.token.message=Challenge Token SMS Text
 DEFLT_sms.challenge.token.message={"":"Your activation token is %TOKEN%."}
 DESCR_sms.challenge.token.message=Message text of SMS sent during forgotten password token process.
-
 
 #*******************************************************************************************#
 #                                 Global Password Policy                                    #
@@ -978,6 +980,7 @@ REGEX_events.pwmDB.logLevel=^(TRACE|DEBUG|INFO|WARN|ERROR|FATAL)$
 
 LABEL_events.ldap.attribute=User History Attribute
 DEFLT_events.ldap.attribute=pwmEventLog
+DEFLT-AD_events.ldap.attribute=
 DESCR_events.ldap.attribute=Attribute used to write a user event attribute in ldap.  The user event log attribute will \
  hold an XML document with the users pwm Event history.  Leave blank to disable \
  logging event history to ldap.
@@ -1162,7 +1165,7 @@ DESCR_challenge.showConfirmation=Show the responses to the user after they confi
 
 
 LABEL_challenge.requiredAttributes=Required Attributes
-DEFLT_challenge.requiredAttributes={"":["sn:Surname:text:2:100:true:false"]}
+DEFLT_challenge.requiredAttributes={"":["sn:Last Name:text:2:100:true:false"]}
 DESCR_challenge.requiredAttributes=Required ldap attributes for challenge/response.  These attributes will be required to \
  be supplied by the user as part of the forgotten password mechanism.   The proxy user \
  will require "compare" ldap rights to thse attributes.\
