config file error handling, select config type

--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -33,6 +33,12 @@
 CATEGORY_LABEL_GENERAL=General
 CATEGORY_DESCR_GENERAL=General settings for the PWM application.  Settings here control the functionality and behavior of the system.
 
+
+LABEL_pwm.requireHTTPS=Require HTTPS
+DEFLT_pwm.requireHTTPS=false
+DESCR_pwm.requireHTTPS=Require HTTPS (instead of cleartext HTTP) traffic to the PWM server.  While non-secure connections are useful \
+  during testing, production PWM servers should always have this setting set to true.
+
 LABEL_pwm.forwardURL=Forward URL
 DEFLT_pwm.forwardURL=/pwm
 DESCR_pwm.forwardURL=After completing any activity which does not require a logout, the user will be forwarded to this url.\
@@ -493,14 +499,11 @@ DEFLT_sms.enable=false
 DESCR_sms.enable=Enable sending of SMS messages for tokens and other events
 
 LABEL_sms.priority=SMS Priority Over Email
-DEFLT_sms.priority=both
-DESCR_sms.priority=Set the preference for sending SMS or email. Valid values are: <ul>\
-  <li><tt>both</tt>: try to send both SMS and email</li>\
-  <li><tt>emailfirst</tt>: try to send email; if no email address is available, try SMS</li>\
-  <li><tt>smsfirst</tt>: try to send SMS; if no SMS number is available, try email</li>\
-  <li><tt>smsonly</tt>: try to send SMS; if no SMS number is available, do not try email</li>\
-  </ul>
-REGEX_sms.priority=^(both|emailfirst|smsfirst|smsonly)$
+DEFLT_sms.priority=BOTH
+DESCR_sms.priority=Set the preference and order for sending SMS over email.
+REGEX_sms.priority=
+OPTS_sms.priority={"BOTH":"Both - Try to send both SMS and email","EMAILFIRST":"Email First - Try to send email; if no email address is available, try SMS","SMSFIRST":"SMS First - Try to send SMS; if no SMS number is available, try email","SMSONLY":"SMS Only - Try to send SMS; if no SMS number is available, do not try email"}
+
 
 LABEL_sms.userSmsAttribute=User SMS number attribute
 DEFLT_sms.userSmsAttribute=personalMobile
@@ -528,17 +531,15 @@ DESCR_sms.gatewayPassword=User password for the SMS gateway
 
 LABEL_sms.gatewayMethod=HTTP(S) Method
 DEFLT_sms.gatewayMethod=POST
-DESCR_sms.gatewayMethod=HTTP(S) protocol method to be used for sending SMS messages.  \
-  Valid values are <tt>POST</tt> and <tt>GET</tt>.
-REGEX_sms.gatewayMethod=^(GET|POST)$
+DESCR_sms.gatewayMethod=HTTP(S) protocol method to be used for sending SMS messages.
+REGEX_sms.gatewayMethod=
+OPTS_sms.gatewayMethod={"POST":"POST", "GET":"GET"}
 
 LABEL_sms.gatewayAuthMethod=SMS Gateway Authentication Method
-DEFLT_sms.gatewayAuthMethod=request
-DESCR_sms.gatewayAuthMethod=Select the method to be used for authentication on the SMS gateway:<ul>\
-  <li><tt>request</tt>: authentication will be part of the request</li>\
-  <li><tt>http</tt>: use HTTP basic authentication</li>\
-  </ul>
-REGEX_sms.gatewayAuthMethod=^(request|http)$
+DEFLT_sms.gatewayAuthMethod=REQUEST
+DESCR_sms.gatewayAuthMethod=Method to be used for authentication on the SMS gateway.
+REGEX_sms.gatewayAuthMethod=
+OPTS_sms.gatewayAuthMethod={"REQUEST":"Request - Authentication will be part of the request","HTTP":"HTTP - Use HTTP basic authentication"}
 
 LABEL_sms.requestData=SMS Request Data
 DEFLT_sms.requestData={"":"user=%USER%&pass=%PASS%&to=%TO%&msg=%MESSAGE%"}
@@ -568,19 +569,19 @@ REGEX_sms.requestContentType=^[A-Za-z0-9_\.-]+/[A-Za-z0-9_\.-]+$
 LABEL_sms.requestContentEncoding=SMS Data Content Encoding
 DEFLT_sms.requestContentEncoding=URL
 DESCR_sms.requestContentEncoding=Data for fields in the SMS data may need \
-  encoding or escaping. Valid values are: <ul>\
-  <li><tt>NONE</tt>: no encoding, use at your own risk</li>\
-  <li><tt>CSV</tt>: escape for comma separated values</li>\
-  <li><tt>HTML</tt>: for HTML data</li>\
-  <li><tt>JAVA</tt>: for Java String representations</li>\
-  <li><tt>JAVASCRIPT</tt>: recommended for JSON formatted documents</li>\
-  <li><tt>SQL</tt>: turn single-quotes (') into double single-quotes ('')</li>\
-  <li><tt>URL</tt>: (default) recommended for GET requests and POST with form data</li>\
-  <li><tt>XML</tt>: for XML and/or SOAP services</li>\
-  </ul>\
+  encoding or escaping.\
+  </br>\
   See <a href="http://commons.apache.org/lang/api-release/org/apache/commons/lang/StringEscapeUtils.html" \
   target="_new">Apache Commons JavaDocs</a> for detailed information.
-REGEX_sms.requestContentEncoding=^(NONE|CSV|HTML|JAVA|JAVASCRIPT|SQL|URL|XML)$
+REGEX_sms.requestContentEncoding=
+OPTS_sms.requestContentEncoding={"NONE":"None - no encoding (use at your own risk)",\
+  "CSV":"CSV -Escape for comma separated values",\
+  "HTML":"HTML - for HTML data",\
+  "JAVA":"Java - for Java String representations",\
+  "JAVASCRIPT":"Javascript - recommended for JSON formatted documents",\
+  "SQL":"SQL - turn single-quotes (') into double single-quotes ('')",\
+  "URL":"URL - recommended for GET requests and POST with form data (default)",\
+  "XML":"XML - for XML and/or SOAP services"}
 
 LABEL_sms.maxTextLength=Maximum SMS Text Length
 DEFLT_sms.maxTextLength=140
@@ -603,13 +604,10 @@ DESCR_sms.senderID=Alphanumerical sender identification. If blank, the provider 
   for values that can be used as a valid sender identification.
 
 LABEL_sms.phoneNumberFormat=SMS Phone Number Format
-DEFLT_sms.phoneNumberFormat=zeros
-DESCR_sms.phoneNumberFormat=The format that should be used for the mobile phone number:<ul> \
-  <li><tt>plain</tt>: country code (e.g. 1 for USA) plus subscriber number (e.g. 12312345): 112312345</li>\
-  <li><tt>plus</tt>: as plain, but with a plus sign as a prefix: +112312345</li>\
-  <li><tt>zeros</tt>: as plain, but prefixed with a double zero: 00112312345</li>\
-  </ul>
-REGEX_sms.phoneNumberFormat=^(plain|plus|zeros)$
+DEFLT_sms.phoneNumberFormat=ZEROS
+DESCR_sms.phoneNumberFormat=The format that should be used for the mobile phone number.
+REGEX_sms.phoneNumberFormat=
+OPTS_sms.phoneNumberFormat={"PLAIN":"Plain - country code (e.g. 1 for USA) plus subscriber number (e.g. 12312345): 112312345","PLUS":"Plus - Same as plain, but with a plus sign as a prefix: +112312345","ZEROS":"Zeros -  Same as plain, but prefixed with a double zero: 00112312345"}
 
 LABEL_sms.defaultCountryCode=Default SMS Country Code
 DEFLT_sms.defaultCountryCode=1
@@ -940,10 +938,9 @@ DESCR_events.healthCheck.minInterval=Frequency (in seconds) at which PWM perform
 LABEL_events.java.stdoutLevel=Java StdOut Log Level
 DEFLT_events.java.stdoutLevel=INFO
 DESCR_events.java.stdoutLevel=Default Log level for stdout.  Most servlet containers will redirect stdout to \
-  a log file.  For example, tomcat logs stdout output to the <i>tomcat/logs/catalina.out</i> file by default.\
-  If blank, PWM will not send events to stdout. \
- <br/><br>Must be one of the following: <b>TRACE</b>, <b>DEBUG</b>, <b>INFO</b>, <b>WARN</b>, <b>ERROR</b> or <b>FATAL</b>.
-REGEX_events.java.stdoutLevel=^(TRACE|DEBUG|INFO|WARN|ERROR|FATAL)$
+  a log file.  For example, tomcat logs stdout output to the <i>tomcat/logs/catalina.out</i> file by default.
+REGEX_events.java.stdoutLevel=
+OPTS_events.java.stdoutLevel={"TRACE":"Trace","DEBUG":"Debug","INFO":"Info","WARN":"Warn","ERROR":"Error","FATAL":"Fatal","Off":"Off - no logging to stdout"}
 
 LABEL_events.java.log4jconfigFile=Log4j Configuration File
 DEFLT_events.java.log4jconfigFile=
@@ -1663,13 +1660,10 @@ REGEX_email.smtp.advancedSettings=^[a-zA-Z0-9.]+=.+$
 
 LABEL_http.proxytype=HTTP Proxy Server Type
 DEFLT_http.proxytype=DIRECT
-DESCR_http.proxytype=The following types of proxies can be used: <ul>\
-  <li><tt>DIRECT</tt>: no proxy</li>\
-  <li><tt>HTTP</tt>: HTTP proxy server</li>\
-  <li><tt>SOCKS</tt>: SOCKS version 4 or 5</li>\
-  </ul>\
-  If you enter anything other than <tt>DIRECT</tt>, the HTTP proxy server address must be filled in, too.
+DESCR_http.proxytype=The type of proxy to be used.  Anything other than <tt>DIRECT</tt> requires a value for HTTP proxy server address as well.
 REGEX_http.proxytype=^(DIRECT|HTTP|SOCKS)$
+OPTS_http.proxytype={"DIRECT":"Direct - no proxy","HTTP":"HTTP - HTTP/S proxy server","SOCKS":"SOCKS - SOCKS version 4 or 5"}
+
 
 LABEL_http.proxyserver=HTTP Proxy Server
 DEFLT_http.proxyserver=proxy.example.com
