--- a/pwm/servlet/src/password/pwm/error/PwmError.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError.properties
@@ -91,7 +91,7 @@ Error_MissingRequiredResponse=Please type all of the required responses.
 Error_MissingRandomResponse=Please type an additional random response.
 Error_BadCaptchaResponse=Incorrect verification code, please try again.
 Error_CaptchaAPIError=An error occurred while validating captcha response.  Please close your brower and try again.  If this error occurs repeatedly contact your helpdesk.
-Error_InvalidConfig=The PWM configuration is missing or invalid.  Check the error log.
+Error_InvalidConfig=The PWM configuration is invalid or corrupt.  Please correct the error, or remove the configuration file.
 Error_InvalidFormID=Your browser session is invalid or has expired.  Please close your browser and then try again.
 Error_MissingNamingAttr=The naming attribute is missing, please contact your administrator.
 Error_TokenMissingContact=There is no contact information available for your account.  Please contact your administrator. 
@@ -100,6 +100,7 @@ Error_BadCurrentPassword=Current password is incorrect, please try again.
 Error_Closing=The operation can not complete because PWM is shutting down.
 Error_Missing_GUID=Unable to locate a GUID for user.  Please contact your administrator.
 Error_TokenExpired=The token you have entered is expired and is no longer valid.  Please try again.
+Error_SecureRequestRequired=Non-secure (HTTP) connections are not permitted to this system.  Please try again using a secure (HTTPS) connection.
 
 Error_FieldRequired=%field% is required
 Error_FieldNotANumber=%field% must be a number
