--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -1551,13 +1551,13 @@ DESCR_captcha.skip.param=Allows for skipping the captcha request if a known para
  would cause PWM to skip the captcha check.\
 
 LABEL_captcha.skip.cookie=Captcha Skip Cookie
-DEFLT_captcha.skip.cookie=instanceID
+DEFLT_captcha.skip.cookie=
 DESCR_captcha.skip.cookie=Allows for skipping the captcha request if a known browser cookie value is held by the \
  browser the cookie is stored in a cookie named 'pwm-captcha-key'.  If the value is correct,\
  then the captcha check is skipped.  The cookie value is stored in the browser after a \
  successful captcha check.\
  <br/><br/>\
- If blank, then no cookie will be read/stored.  If set to 'instanceID', then the instanceID \
+ If blank, then no cookie will be read/stored.  If set to 'INSTANCEID', then the instanceID \
  of pwm (see web.xml instanceID setting) will be used.  If set to any other value, then \
  the literal value will be used.\
 
@@ -1658,22 +1658,10 @@ DESCR_email.smtp.advancedSettings=Name/Value settings to control the behavior of
   The settings must be in "name=value" format, where name is the key value of a valid JavaMail API setting.
 REGEX_email.smtp.advancedSettings=^[a-zA-Z0-9.]+=.+$
 
-LABEL_http.proxytype=HTTP Proxy Server Type
-DEFLT_http.proxytype=DIRECT
-DESCR_http.proxytype=The type of proxy to be used.  Anything other than <tt>DIRECT</tt> requires a value for HTTP proxy server address as well.
-REGEX_http.proxytype=^(DIRECT|HTTP|SOCKS)$
-OPTS_http.proxytype={"DIRECT":"Direct - no proxy","HTTP":"HTTP - HTTP/S proxy server","SOCKS":"SOCKS - SOCKS version 4 or 5"}
-
-
-LABEL_http.proxyserver=HTTP Proxy Server
-DEFLT_http.proxyserver=proxy.example.com
-DESCR_http.proxyserver=The server name (FQDN), IPv4 or IPv6 address of the \
-  proxy server used for outgoing HTTP traffic.
-REGEX_http.proxyserver=^([A-Za-z0-9_\.-]+\.[A-Za-z]{2,}|[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}|[0-9A-Fa-f:]{3,})$
-
-LABEL_http.proxyport=HTTP Proxy Server Port
-DEFLT_http.proxyport=8080
-DESCR_http.proxyport=The server port number of the proxy server used for outgoing HTTP traffic. \
-  If the port number is ommitted or zero, the default port number 8080 is used for HTTP or \
-  1080 for SOCKS.
-REGEX_http.proxyport=^([0-9]+{1,5})$
+LABEL_http.proxy.url=HTTP Proxy
+DEFLT_http.proxy.url
+DESCR_http.proxy.url=The url of the HTTP proxy server.  If blank, no proxy server will be used.\
+   <ul><li>For http proxy server, use "<i>http://serverame:3128</i>" format</li>\
+   <li>For authenticated proxy server, use the "<i>http://username:password@servername:3128</i>" format</ul></li>\
+   <br/>
+REGEX_http.proxyserver=^http://$
