--- a/pwm/servlet/src/password/pwm/AppProperty.properties
+++ b/pwm/servlet/src/password/pwm/AppProperty.properties
@@ -104,6 +104,7 @@ http.parameter.oauth.redirectUri=redirect_uri
 http.parameter.oauth.refreshToken=refresh_token
 http.parameter.oauth.state=state
 http.parameter.oauth.grantType=grant_type
+http.download.buffer.size=102400
 http.session.recycleAtAuth=true
 http.session.validationKeyLength=32
 intruder.retentionTimeMS=86400000
