- misc minor fixes

--- a/pwm/servlet/src/password/pwm/AppProperty.properties
+++ b/pwm/servlet/src/password/pwm/AppProperty.properties
@@ -138,6 +138,7 @@ logging.file.maxSize=20MB
 logging.file.maxRollover=50
 logging.file.path=logs
 newUser.ldap.useTempPassword=auto
+newUser.token.allowPlainPassword=true
 nmas.threads.maxCount=120
 nmas.threads.minSeconds=1800
 nmas.threads.maxSeconds=3000
