- fix url parameters

--- a/pwm/servlet/src/password/pwm/AppProperty.properties
+++ b/pwm/servlet/src/password/pwm/AppProperty.properties
@@ -196,6 +196,7 @@ security.defaultEphemeralBlockAlg=AES128_HMAC256
 security.defaultEphemeralHashAlg=SHA512
 security.config.minSecurityKeyLength=32
 seedlist.builtin.path=seedlist.zip
+smtp.subjectEncodingCharset=UTF8
 token.removalDelayMS=86400000
 token.purgeBatchSize=1000
 token.maxUniqueCreateAttempts=100
