persist generated https server self-signed cert in localdb

--- a/pwm/servlet/src/password/pwm/AppProperty.properties
+++ b/pwm/servlet/src/password/pwm/AppProperty.properties
@@ -23,6 +23,8 @@
 # Default application values.  This is not an end user modifiable file.  Values
 # can be overridden in the configuration.
 
+application.fileLock.filename=applicationPath.lock
+application.fileLock.waitSeconds=120
 audit.events.emailFrom=Audit Event Notification <@DefaultEmailFromAddress@>
 audit.vault.maxRecords=100000000
 backup.path=backup
@@ -184,6 +186,7 @@ recaptcha.validateUrl=https://www.google.com/recaptcha/api/siteverify
 security.html.stripInlineJavascript=false
 security.http.stripHeaderRegex=\\n|\\r|(?ism)%0A|%0D
 security.http.promiscuousEnable=false
+security.httpsServer.selfCert.futureSeconds=63113904
 security.responses.hashIterations=100000
 security.input.trim=true
 security.input.password.trim=false
