--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,6 @@
     </properties>
 
     <build>
-        <resources>
-            <resource>
-                <!-- Grab all non-java files under src/main/java. We need to do this until they are all moved underneath src/main/resources -->
-                <directory>src/main/java</directory>
-                <excludes><exclude>**/*.java</exclude></excludes>
-            </resource>
-        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -141,7 +134,7 @@
         <dependency>
             <groupId>org.graylog2</groupId>
             <artifactId>syslog4j</artifactId>
-            <version>0.9.53</version>
+            <version>0.9.48</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
@@ -156,7 +149,7 @@
         <dependency>
             <groupId>com.sleepycat</groupId>
             <artifactId>je</artifactId>
-            <version>5.0.73</version>
+            <version>6.4.9</version>
         </dependency>
         <dependency>
             <groupId>com.sun.jersey</groupId>
@@ -201,6 +194,12 @@
             <id>project.local</id>
             <name>project</name>
             <url>file:///${project.basedir}/local-maven-repo</url>
+        </repository>
+        <repository>
+            <id>oracleReleases</id>
+            <name>Oracle Released Java Packages</name>
+            <url>http://download.oracle.com/maven</url>
+            <layout>default</layout>
         </repository>
     </repositories>
 </project>
