Populate BuildInformation.properties during build
The following values are now populated during maven builds:
build.version=${project.version}
build.number=${build.number}
build.time=${timestamp.iso}
build.user=${user.name}
build.java.vendor=${java.vendor}
build.java.version=${java.version}
build.revision=${build.revision}

build.number and build.revision are only populated when supplied on the command line, such as:
$ mvn -Dbuild.number=123 -Dbuild.revision=fe34a12 package

--- a/src/main/resources/password/pwm/BuildInformation.properties
+++ b/src/main/resources/password/pwm/BuildInformation.properties
@@ -22,11 +22,10 @@
 
 #Build Number for ANT. Do not edit!
 #Mon Nov 25 19:53:33 EST 2013
-build.version=
-build.number=
-build.time=
-build.user=
-build.java.vendor=
-build.java.version=
-build.revision=
-
+build.version=${project.version}
+build.number=${build.number}
+build.time=${timestamp.iso}
+build.user=${user.name}
+build.java.vendor=${java.vendor}
+build.java.version=${java.version}
+build.revision=${build.revision}
